--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <external-path name="external_files" path="."/>
+    <external-path
+        name="videos"
+        path="Android/data/com.lift.finbit.lits/files/videos"/>
+<!--    <external-files-path name="videos" path="."/>-->
+    <cache-path name="videos" path="Android/data/com.lift.finbit.lits/files/videos"/>
 </paths>
